monticore-generator/src/test/resources/cocos/invalid/A4022/A4022.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4022;

grammar A4022 {

  A extends A;

}
